:recycle: update notebooks to support the new fetch_coordinates function

--- a/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
+++ b/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
@@ -245,7 +245,7 @@
     "plinkio = CustomBinaryPlinkIO(species=\"Sheep\", chip_name=\"IlluminaOvineSNP50\")\n",
     "plinkio.plink_file = isheep_50K\n",
     "plinkio.read_mapfile()\n",
-    "plinkio.fetch_coordinates(search_field=\"rs_id\", chip_name=\"IlluminaOvineSNP50\", **OAR3._asdict())"
+    "plinkio.fetch_coordinates(search_field=\"rs_id\", chip_name=\"IlluminaOvineSNP50\", src_assembly=OAR3)"
    ]
   },
   {
@@ -468,7 +468,7 @@
     "plinkio = CustomBinaryPlinkIO(species=\"Sheep\", chip_name=\"IlluminaOvineHDSNP\")\n",
     "plinkio.plink_file = isheep_600K\n",
     "plinkio.read_mapfile()\n",
-    "plinkio.fetch_coordinates(search_field=\"rs_id\", chip_name=\"IlluminaOvineHDSNP\", **OAR3._asdict())"
+    "plinkio.fetch_coordinates(search_field=\"rs_id\", chip_name=\"IlluminaOvineHDSNP\", src_assembly=OAR3)"
    ]
   },
   {
