--- a/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
+++ b/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
@@ -34,10 +34,11 @@
     "from src.features.smarterdb import global_connection, Dataset\n",
     "from src.features.plinkio import AffyPlinkIO, TextPlinkIO, CodingException\n",
     "from src.features.utils import get_interim_dir, get_project_dir\n",
-    "from src.data.common import WORKING_ASSEMBLIES\n",
+    "from src.data.common import WORKING_ASSEMBLIES, AssemblyConf\n",
     "\n",
     "_ = global_connection()\n",
     "OAR3 = WORKING_ASSEMBLIES[\"OAR3\"]\n",
+    "AFFY3 = AssemblyConf('Oar_v3.1','affymetrix')\n",
     "logger = logging.getLogger('src.features.plinkio')\n",
     "logger.setLevel(logging.CRITICAL)"
    ]
@@ -166,8 +167,7 @@
    "source": [
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
-    "    version=\"Oar_v3.1\",\n",
-    "    imported_from=\"affymetrix\",\n",
+    "    src_assembly=AFFY3,\n",
     "    search_field=\"probeset_id\"\n",
     ")"
    ]
@@ -210,7 +210,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "409e0b4be72f4ba99c814731242e7dae",
+       "model_id": "22739957e43f462abef2015ade7fabaa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "013126eea534404e9a3a5cad1feb95e9",
+       "model_id": "675c8bcf9eb14c2c94dfdf04b7af1896",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,8 +336,7 @@
    "source": [
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
-    "    version=\"Oar_v3.1\",\n",
-    "    imported_from=\"affymetrix\",\n",
+    "    src_assembly=AFFY3,\n",
     "    search_field=\"probeset_id\"\n",
     ")"
    ]
@@ -380,7 +379,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f93163e953df45a4a3b7c496fcacbdb8",
+       "model_id": "47bc6ce06e674d0dabf2d108692d9948",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,7 +429,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b389875d704747018735f0f33b35ae38",
+       "model_id": "11554103e1d0456cad29c2d62a20b874",
        "version_major": 2,
        "version_minor": 0
       },
@@ -474,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'Assaf', 'SMARTER'} breeds\n"
+      "Got {'SMARTER', 'Assaf'} breeds\n"
      ]
     }
    ],
@@ -540,8 +539,7 @@
    "source": [
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
-    "    version=\"Oar_v3.1\",\n",
-    "    imported_from=\"affymetrix\",\n",
+    "    src_assembly=AFFY3,\n",
     "    search_field=\"probeset_id\"\n",
     ")\n",
     "probeset_found = len(plinkio.mapdata)-len(plinkio.filtered)\n",
@@ -573,8 +571,7 @@
    "source": [
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
-    "    version=\"Oar_v3.1\",\n",
-    "    imported_from=\"affymetrix\",\n",
+    "    src_assembly=AFFY3,\n",
     "    search_field=\"rs_id\"\n",
     ")\n",
     "rs_found = len(plinkio.mapdata)-len(plinkio.filtered)\n",
@@ -619,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f55cd7cfd94a405dafc0b62ae9bd6c27",
+       "model_id": "e2631e85adea403595af665c2214d0c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3a2bf7b158648f1b3aa0534f4781e74",
+       "model_id": "0273a7e040a545719269bfe4ed12d58f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -879,7 +876,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbe0fb7103f24b4f91a44d57aa37ae02",
+       "model_id": "1b4a824d02d94184aeadf92f89a06a33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -980,7 +977,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e23573e08b3a4fed87071959cca1af4d",
+       "model_id": "4c8d1e8215594c3ca8fc6fc58e3b1c24",
        "version_major": 2,
        "version_minor": 0
       },
