--- a/notebooks/exploratory/0.19.0-hungary_sheeps.ipynb
+++ b/notebooks/exploratory/0.19.0-hungary_sheeps.ipynb
@@ -114,9 +114,7 @@
    "outputs": [],
    "source": [
     "plinkio.read_mapfile()\n",
-    "plinkio.fetch_coordinates(\n",
-    "    **OAR3._asdict()\n",
-    ")"
+    "plinkio.fetch_coordinates(src_assembly=OAR3)"
    ]
   },
   {
@@ -157,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbeafae633ed4f92b86b6d034a97cf88",
+       "model_id": "901cbe6aec744ed793b54a80bac0dac8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee008ac6359343f8a04d0596d908e8bf",
+       "model_id": "790f3fd566144c919fc159c749377092",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'Suffolk', 'Merino', 'Tsigai', 'I.France', 'R.Tsigai', 'Tetra', 'W.Dorper', 'Dorper', 'Racka', 'Turcana'} breeds\n"
+      "Got {'Suffolk', 'Merino', 'W.Dorper', 'Turcana', 'R.Tsigai', 'Tsigai', 'I.France', 'Racka', 'Tetra', 'Dorper'} breeds\n"
      ]
     }
    ],
@@ -427,8 +425,7 @@
     }
    ],
    "source": [
-    "phenotype_dataset = Dataset.objects.get(country=\"Hungary\", type_=\"phenotypes\")\n",
-    "with open(phenotype_dataset.working_dir / \"NativeSheep GPS.xlsx\", \"rb\") as handle:\n",
+    "with open(hungarian_dataset.working_dir / \"NativesheepBreeds_Hu/NativeSheep GPS.xlsx\", \"rb\") as handle:\n",
     "    info = pd.read_excel(handle)\n",
     "info.head()"
    ]
@@ -1079,7 +1076,7 @@
    "id": "b0148fa5-906f-4f94-a626-24c1d3e81cbc",
    "metadata": {},
    "source": [
-    "This fixed metadata file will be placed in phenotype archive"
+    "This fixed metadata file will be placed in the archive"
    ]
   },
   {
