:sparkles: import the first batch of Spanish sheeps

--- a/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
+++ b/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
@@ -210,7 +210,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22739957e43f462abef2015ade7fabaa",
+       "model_id": "4e2b05512c9c44f79528d657fcda6c07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "675c8bcf9eb14c2c94dfdf04b7af1896",
+       "model_id": "2d7417b4c3294d4abebf6b6091c28c7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -379,7 +379,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47bc6ce06e674d0dabf2d108692d9948",
+       "model_id": "b38ec267474544dfbbdad53da6ae2fef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,7 +429,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11554103e1d0456cad29c2d62a20b874",
+       "model_id": "773f427409c941288013812489dd73fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -473,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'SMARTER', 'Assaf'} breeds\n"
+      "Got {'Assaf', 'SMARTER'} breeds\n"
      ]
     }
    ],
@@ -616,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2631e85adea403595af665c2214d0c8",
+       "model_id": "f5da117bf34549ca9c13704da4f56435",
        "version_major": 2,
        "version_minor": 0
       },
@@ -666,7 +666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0273a7e040a545719269bfe4ed12d58f",
+       "model_id": "375d69f2f6854db6b66c6426387fc533",
        "version_major": 2,
        "version_minor": 0
       },
@@ -876,7 +876,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b4a824d02d94184aeadf92f89a06a33",
+       "model_id": "c547dae5da5944a99d6c10cc848a4509",
        "version_major": 2,
        "version_minor": 0
       },
@@ -977,7 +977,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c8d1e8215594c3ca8fc6fc58e3b1c24",
+       "model_id": "adb2e03364414406a4dd7f368cc0694f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1073,6 +1073,7 @@
     "for line in plinkio.read_pedfile():\n",
     "    # define the minimal set of smarter metadata\n",
     "    data[\"original_id\"].append(line[1])\n",
+    "    data[\"fid\"].append(line[0])\n",
     "    \n",
     "    # this breed is already in smarter\n",
     "    data[\"breed_name\"].append(\"Churra\")\n",
