:sparkles: import the 2nd custom affymetrix chip

--- a/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
+++ b/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
@@ -182,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 45375 of 49702 SNPs (8.71% missing)\n"
+      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e2b05512c9c44f79528d657fcda6c07",
+       "model_id": "4f953bf3e0734badb2b42b873f22a82c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d7417b4c3294d4abebf6b6091c28c7b",
+       "model_id": "5c9f0f9b521749e9b4e7352d6b9678d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -351,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 45375 of 49702 SNPs (8.71% missing)\n"
+      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
      ]
     }
    ],
@@ -379,7 +379,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b38ec267474544dfbbdad53da6ae2fef",
+       "model_id": "d2000fe45ea249a7974472afc8733253",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,7 +429,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "773f427409c941288013812489dd73fa",
+       "model_id": "a0f1a6abdcbe492b89511ccae55f15c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -473,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'Assaf', 'SMARTER'} breeds\n"
+      "Got {'SMARTER', 'Assaf'} breeds\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 32 SNPs using 'probeset_id'\n"
+      "Found 14177 SNPs using 'probeset_id'\n"
      ]
     }
    ],
@@ -564,7 +564,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 42032 SNPs using 'rs_id'\n"
+      "Found 46159 SNPs using 'rs_id'\n"
      ]
     }
    ],
@@ -588,7 +588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 42064 of 60379 SNPs (30.33% missing)\n"
+      "I can retrieve 60336 of 60379 SNPs (0.07% missing)\n"
      ]
     }
    ],
@@ -616,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5da117bf34549ca9c13704da4f56435",
+       "model_id": "66c0297571524ef8a0ef143083c52846",
        "version_major": 2,
        "version_minor": 0
       },
@@ -666,7 +666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "375d69f2f6854db6b66c6426387fc533",
+       "model_id": "108a3e0e4f6a4ce39e37b24e4ed51444",
        "version_major": 2,
        "version_minor": 0
       },
@@ -876,7 +876,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c547dae5da5944a99d6c10cc848a4509",
+       "model_id": "7350f42696a14b7d885f713ab796038c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -977,7 +977,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adb2e03364414406a4dd7f368cc0694f",
+       "model_id": "ab137e700c004865a249cf2c7c28360e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1021,7 +1021,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 41941 of 60379 SNPs (30.54% missing) after filtering\n"
+      "I can retrieve 46068 of 60379 SNPs (23.7% missing) after filtering\n"
      ]
     }
    ],
