--- a/notebooks/exploratory/0.18.1_spanish_sheeps_2.ipynb
+++ b/notebooks/exploratory/0.18.1_spanish_sheeps_2.ipynb
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 45375 of 49702 SNPs (8.71% missing)\n"
+      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8b88b09b1ba4192913361e38ee4d7be",
+       "model_id": "31dbf40dade7462891e64d3a49d8d744",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'SMARTER', 'Assaf'} breeds\n"
+      "Got {'Assaf', 'SMARTER'} breeds\n"
      ]
     }
    ],
@@ -286,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 45375 of 49702 SNPs (8.71% missing)\n"
+      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
      ]
     }
    ],
@@ -314,7 +314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ce6dbc192134d509243041916aca518",
+       "model_id": "ea4b9ee044614a19829923d5ee0cf09e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -431,7 +431,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 45375 of 49702 SNPs (8.71% missing)\n"
+      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b54a62a4b6b494e879583385e664fd9",
+       "model_id": "a61ded2a488b4cc7b3131aebb3f051d7",
        "version_major": 2,
        "version_minor": 0
       },
