:monocle_face: update fetch coordinate by probeset and recover churra ds
Passing chip_name while searching for coordinates and joining rs_id and probeset_id to resolve the churra dataset

--- a/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
+++ b/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
@@ -168,7 +168,8 @@
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
     "    src_assembly=AFFY3,\n",
-    "    search_field=\"probeset_id\"\n",
+    "    search_field=\"probeset_id\",\n",
+    "    chip_name=assaf_dataset.chip_name\n",
     ")"
    ]
   },
@@ -182,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
+      "I can retrieve 49619 of 49702 SNPs (0.17% missing)\n"
      ]
     }
    ],
@@ -210,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f953bf3e0734badb2b42b873f22a82c",
+       "model_id": "afafe1e8c6b3494780c57f4750977de3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c9f0f9b521749e9b4e7352d6b9678d0",
+       "model_id": "b79b87ec0584469aabe90a0ef8c148d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,7 +338,8 @@
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
     "    src_assembly=AFFY3,\n",
-    "    search_field=\"probeset_id\"\n",
+    "    search_field=\"probeset_id\",\n",
+    "    chip_name=castellana_ovine.chip_name\n",
     ")"
    ]
   },
@@ -351,7 +353,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
+      "I can retrieve 49619 of 49702 SNPs (0.17% missing)\n"
      ]
     }
    ],
@@ -379,7 +381,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2000fe45ea249a7974472afc8733253",
+       "model_id": "b09ed8979ccc43239eaff84a93febd47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,7 +431,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0f1a6abdcbe492b89511ccae55f15c3",
+       "model_id": "8c41db2c2a414224b6d18fd5ec06bdf7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -473,7 +475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'SMARTER', 'Assaf'} breeds\n"
+      "Got {'Assaf', 'SMARTER'} breeds\n"
      ]
     }
    ],
@@ -540,7 +542,8 @@
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
     "    src_assembly=AFFY3,\n",
-    "    search_field=\"probeset_id\"\n",
+    "    search_field=\"probeset_id\",\n",
+    "    chip_name=churra_dataset.chip_name\n",
     ")\n",
     "probeset_found = len(plinkio.mapdata)-len(plinkio.filtered)\n",
     "print(f\"Found {probeset_found} SNPs using 'probeset_id'\")"
@@ -551,12 +554,51 @@
    "id": "794e094c-24fe-46fc-a8df-527e3d594051",
    "metadata": {},
    "source": [
-    "I can't find SNP using *affymetrix ids*. Let's use `rs_id` instead:"
+    "I can't find all the SNPs using *affymetrix ids*. Track those informations in variables."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "67194392-e6b3-4930-90e2-b52d34a97caf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Affx-509839642',\n",
+       " None,\n",
+       " 'Affx-509840550',\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "affy_locations, affy_variants_name = plinkio.src_locations.copy(), plinkio.variants_name.copy()\n",
+    "affy_variants_name[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0ade528-11a2-4f34-b1c5-f86c37841d27",
+   "metadata": {},
+   "source": [
+    "Try to use `rs_id`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "a23b3927-fc01-474d-b7af-c8d7e4d45fcd",
    "metadata": {},
    "outputs": [
@@ -564,7 +606,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 46159 SNPs using 'rs_id'\n"
+      "Found 46192 SNPs using 'rs_id'\n"
      ]
     }
    ],
@@ -572,7 +614,8 @@
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
     "    src_assembly=AFFY3,\n",
-    "    search_field=\"rs_id\"\n",
+    "    search_field=\"rs_id\",\n",
+    "    chip_name=churra_dataset.chip_name\n",
     ")\n",
     "rs_found = len(plinkio.mapdata)-len(plinkio.filtered)\n",
     "print(f\"Found {rs_found} SNPs using 'rs_id'\")"
@@ -580,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "653ccb6a-67a4-494d-883b-39cb11812e6e",
    "metadata": {},
    "outputs": [
@@ -588,7 +631,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 60336 of 60379 SNPs (0.07% missing)\n"
+      "I can retrieve 60369 of 60379 SNPs (0.02% missing) using both IDs\n"
      ]
     }
    ],
@@ -596,7 +639,53 @@
     "snps_found = probeset_found + rs_found\n",
     "perc_missing = round(100 - (snps_found / len(plinkio.mapdata) * 100), 2)\n",
     "\n",
-    "print(f\"I can retrieve {snps_found} of {len(plinkio.mapdata)} SNPs ({perc_missing}% missing)\")"
+    "print(f\"I can retrieve {snps_found} of {len(plinkio.mapdata)} SNPs ({perc_missing}% missing) using both IDs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1584f2b-18e8-4423-916e-45dd5a4afad9",
+   "metadata": {},
+   "source": [
+    "Ok, it's time to join the two coordinate data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6f240dae-8cc1-4bdd-a516-b868be016df6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, location in enumerate(plinkio.src_locations):\n",
+    "    if not location:\n",
+    "        plinkio.src_locations[i] = affy_locations[i]\n",
+    "        \n",
+    "for i, name in enumerate(plinkio.variants_name):\n",
+    "    if not name:\n",
+    "        plinkio.variants_name[i] = affy_variants_name[i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e762570a-2803-4f66-adbc-668330d21c28",
+   "metadata": {},
+   "source": [
+    "New to update the filtered using the new location information:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7e31d199-20fb-4e2f-ba14-1f3c0bc07dbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plinkio.filtered = set()\n",
+    "\n",
+    "for idx, location in enumerate(plinkio.src_locations):\n",
+    "    if not location:\n",
+    "       plinkio.filtered.add(idx) "
    ]
   },
   {
@@ -609,14 +698,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "7380a2d0-3b79-4055-bb90-91b05d27fc87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66c0297571524ef8a0ef143083c52846",
+       "model_id": "b324b7d65a184370853633dc9116f905",
        "version_major": 2,
        "version_minor": 0
       },
@@ -631,7 +720,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Error for SNP 5:rs409143979: G/G <> A/C\n"
+      "Error for SNP 2:AX-117092676: C/C <> A/G\n"
      ]
     },
     {
@@ -640,7 +729,7 @@
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,14 +748,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "55bccc07-9553-411c-91d0-3c4b05977d8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "108a3e0e4f6a4ce39e37b24e4ed51444",
+       "model_id": "97e50c9ba19c4afaba750c684d7add85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,7 +779,7 @@
        "False"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "45eb7bb6-3c80-4526-bfdc-f1aed0d4334b",
    "metadata": {},
    "outputs": [
@@ -723,7 +812,7 @@
        " (55959, MapRecord(chrom='20', name='rs430225014', cm=0.0, position=26705026))]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "8a2750f1-a719-4c02-9504-7b71fdc53fdf",
    "metadata": {},
    "outputs": [
@@ -783,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "69da6188-674f-4638-8657-6107169413b1",
    "metadata": {},
    "outputs": [
@@ -825,7 +914,7 @@
        " 'rs423593214': 2}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "d317e600-f282-48d3-a669-6708118a38c6",
    "metadata": {},
    "outputs": [],
@@ -869,115 +958,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "cd4f6b13-b675-4e15-8833-cab7ff16e32c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7350f42696a14b7d885f713ab796038c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/150 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 16923:rs414355830: G/C <> T/G\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plinkio.is_affymetrix()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de9bf566-7071-4dca-b115-421fba02ccbd",
-   "metadata": {},
-   "source": [
-    "Well, `rs414355830` is assigned to multiple probes, some of them are `G/C` and not `T/G` (as expected in `oar3_OAR2_3369768` illumina probe). One of this probe is tri-allelic in manifest file and is not imported. So, those SNPs should be manually removed. Try to read the manifest file and search for these three allelic SNPs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "d1adf2ba-114d-43bb-a7ba-5f452a2fe00e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Skipping: ##For information about the Annotation file content, please see the bundled README file.\n",
-      "Skipping: #%guid=00005d49-3207-4b7a-118d-001bbd006ce2\n",
-      "Skipping: #%create_date=Tue Apr  4 11:40:20 2017\n",
-      "Skipping: #%chip_type=Axiom_BGovisNP\n",
-      "Skipping: #%genome-species=Axiom_BGovisNP_ovine.r1\n",
-      "Skipping: #%genome-version=N/A\n",
-      "Skipping: #%genome-version-ucsc=N/A\n",
-      "Skipping: #%genome-version-ncbi=N/A\n",
-      "Skipping: #%genome-version-create_date=N/A\n",
-      "Skipping: #%dbSNP_date=N/A\n",
-      "Skipping: #%dbSNP_version=N/A\n",
-      "Skipping: #%hapmap-date=N/A\n",
-      "Skipping: #%hapmap-version=N/A\n",
-      "Skipping: #%netaffx-annotation-date=N/A\n",
-      "Skipping: #%netaffx-annotation-netaffx-build=N/A\n",
-      "Skipping: #%netaffx-annotation-tabular-format-version=1.0\n",
-      "Skipping: #%netaffx-annotation-docgen-method=com.affymetrix.database.docgen.DocGenDriver\n",
-      "Skipping: #%netaffx-annotation-docgen-version=cluster_friendly_submission\n"
-     ]
-    }
-   ],
-   "source": [
-    "multi_allelic = []\n",
-    "for record in read_Manifest(get_project_dir() / \"data/external/SHE/AFFYMETRIX/Axiom_BGovisNP_ovine_Annotation.r1.csv.gz\"):\n",
-    "    if int(record.allele_count) > 2:\n",
-    "        if record.rsid:\n",
-    "            multi_allelic.append(record.rsid)\n",
-    "\n",
-    "for idx, snp in enumerate(plinkio.mapdata):\n",
-    "    if snp.name in multi_allelic:\n",
-    "        plinkio.filtered.add(idx)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc12116f-08ba-487a-8fc0-c6160bad4b11",
-   "metadata": {},
-   "source": [
-    "Test again for affimetrix coordinates:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "5ff08e78-a23a-45e3-9759-9ddf5b133557",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab137e700c004865a249cf2c7c28360e",
+       "model_id": "feff6a0ddd56423086b06d6a9afefe77",
        "version_major": 2,
        "version_minor": 0
       },
@@ -994,7 +982,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "389a8fe3-a893-4c9b-977f-ea1b2ec0780d",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1009,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 46068 of 60379 SNPs (23.7% missing) after filtering\n"
+      "I can retrieve 60286 of 60379 SNPs (0.15% missing) after filtering\n"
      ]
     }
    ],
@@ -1037,12 +1025,12 @@
    "id": "e85a0536-b9d2-4e6c-bb18-5ed541eeb2a1",
    "metadata": {},
    "source": [
-    "More or less is the same percentage of the data I read at the beginning. I think I could write a new plink file with these filtering SNPs:"
+    "I think I could write a new plink file with these filtering SNPs:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "5d7b437b-76ab-4b47-bd16-ce9ac026a167",
    "metadata": {},
    "outputs": [],
@@ -1063,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "9b95e69a-4320-43cc-a778-c1d462396619",
    "metadata": {},
    "outputs": [],
@@ -1095,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "9e5224d4-99ed-4f35-b068-868eb1aa1ba1",
    "metadata": {},
    "outputs": [],
