--- a/notebooks/exploratory/0.18.1_spanish_sheeps_2.ipynb
+++ b/notebooks/exploratory/0.18.1_spanish_sheeps_2.ipynb
@@ -127,7 +127,8 @@
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
     "    src_assembly=AFFY3,\n",
-    "    search_field=\"probeset_id\"\n",
+    "    search_field=\"probeset_id\",\n",
+    "    chip_name=dataset_20220326.chip_name\n",
     ")"
    ]
   },
@@ -141,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
+      "I can retrieve 49619 of 49702 SNPs (0.17% missing)\n"
      ]
     }
    ],
@@ -169,7 +170,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31dbf40dade7462891e64d3a49d8d744",
+       "model_id": "6f6f36b273e84fa5b68f513261b6f2d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,7 +273,8 @@
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
     "    src_assembly=AFFY3,\n",
-    "    search_field=\"probeset_id\"\n",
+    "    search_field=\"probeset_id\",\n",
+    "    chip_name=dataset_20220428.chip_name\n",
     ")"
    ]
   },
@@ -286,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
+      "I can retrieve 49619 of 49702 SNPs (0.17% missing)\n"
      ]
     }
    ],
@@ -314,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea4b9ee044614a19829923d5ee0cf09e",
+       "model_id": "8fed4842770847aebc33826bc4480e9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,7 +419,8 @@
     "plinkio.read_mapfile()\n",
     "plinkio.fetch_coordinates(\n",
     "    src_assembly=AFFY3,\n",
-    "    search_field=\"probeset_id\"\n",
+    "    search_field=\"probeset_id\",\n",
+    "    chip_name=dataset_20220503.chip_name\n",
     ")"
    ]
   },
@@ -431,7 +434,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I can retrieve 49589 of 49702 SNPs (0.23% missing)\n"
+      "I can retrieve 49619 of 49702 SNPs (0.17% missing)\n"
      ]
     }
    ],
@@ -459,7 +462,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a61ded2a488b4cc7b3131aebb3f051d7",
+       "model_id": "3a5b607018224bc08ce6dbb42fc0bbbf",
        "version_major": 2,
        "version_minor": 0
       },
