--- a/notebooks/exploratory/0.20.0-bunop-uruguay_fg.ipynb
+++ b/notebooks/exploratory/0.20.0-bunop-uruguay_fg.ipynb
@@ -171,6 +171,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c862ffb-8d7e-479d-8872-9effd4fff208",
+   "metadata": {},
+   "source": [
+    "There's only one file in dataset, the file with the data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "cbb1f1bf-fc73-4fda-bae9-7193e0e3025d",
@@ -210,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b46085d17e3e42349fd8aaadceb9511f",
+       "model_id": "af2e51cb385743489a8bff969907a2d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +243,7 @@
     "for probeset_id in tqdm(probeset_ids, total=len(probeset_ids)):\n",
     "    query = {\n",
     "        \"probesets__match\": {\n",
-    "            'chip_name': \"AffymetrixAxiomOviCan\",\n",
+    "            'chip_name': placa_junio.chip_name,\n",
     "            'probeset_id': probeset_id\n",
     "        }\n",
     "    }\n",
@@ -478,7 +486,7 @@
     "creole_metadata = Dataset.objects.get(file=\"20220809_105_Creole_Samples_INIA_Uruguay.zip\")\n",
     "with open(creole_metadata.working_dir / \"20220809_105_Creole_Samples_INIA_Uruguay.xlsx\", \"rb\") as handle:\n",
     "    info = pd.read_excel(handle)\n",
-    "placa_junio_metadata = info[info[\"File\"] == \"Placa_Junio_recommended.txt\"]\n",
+    "placa_junio_metadata = info[info[\"File\"] == placa_junio.contents[0]]\n",
     "print(f\"Got {placa_junio_metadata.shape[0]} samples\")\n",
     "placa_junio_metadata"
    ]
@@ -757,14 +765,481 @@
     }
    ],
    "source": [
-    "placa_junio_metadata = info[info[\"File\"] == \"Placa_Junio_recommended.txt\"]\n",
+    "placa_junio_metadata = info[info[\"File\"] == placa_junio.contents[0]]\n",
     "placa_junio_metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f53d1bf-5cd9-4eee-804b-248517b169f4",
+   "metadata": {},
+   "source": [
+    "Ok, I need to track this new column in metadata file. Let's explore the other datasets, then write down the updated metadata file. I need also to define a new class in `src.features.plinkio` module to deal with this type of data files."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d5c5ea9-d150-4c51-b50c-dfbf6f7e22f1",
+   "metadata": {},
+   "source": [
+    "## OP829-924 INIA Abril\n",
+    "Time for `OP829-924_INIA_Abril.zip` file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "438aa3b1-506c-41e3-be97-75c785f99730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inia_abril = Dataset.objects.get(file=\"OP829-924_INIA_Abril.zip\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97dd1d40-33cf-4ef8-ab4d-01a99b6efba5",
+   "metadata": {},
+   "source": [
+    "There's only one file in dataset, the file with the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8579ed11-22a4-48ff-a8ae-bba26bcad45e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Skipping: ##batch-folder=\\\\172.16.100.6\\Home\\Resultados genotipados\\ovinos INIA\\2022\\Analisis\\OP829-924_4\n",
+      "Skipping: ##annotation-file=C:\\Users\\Public\\Documents\\AxiomAnalysisSuite\\Library\\Axiom_Ovi_Can_ovine_Analysis.r5\\Axiom_Ovi_Can.na35.r5.a6.annot.db\n",
+      "Skipping: ##export-txt-file=\\\\172.16.100.6\\Home\\Resultados genotipados\\ovinos INIA\\2022\\Resultados\\OP829-924\\OP829-924 INIA Abril.txt\n",
+      "Skipping: ##snp-count=34327\n",
+      "Skipping: ##samples-per-snp=96\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = inia_abril.working_dir / inia_abril.contents[0]\n",
+    "probeset_ids = [record.probeset_id for record in read_affymetrixRow(path)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6760b9a8-09bf-4c31-8a3b-9ab223dd21c0",
+   "metadata": {},
+   "source": [
+    "Check if those probeset ids are in database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "98d8a47d-4f54-46f2-adb8-e4bd8163c990",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2a409cf18314ec6b8b96421d1fcf269",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/34327 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing 0 SNPs of 34327\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing = 0\n",
+    "\n",
+    "for probeset_id in tqdm(probeset_ids, total=len(probeset_ids)):\n",
+    "    query = {\n",
+    "        \"probesets__match\": {\n",
+    "            'chip_name': inia_abril.chip_name,\n",
+    "            'probeset_id': probeset_id\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    if not VariantSheep.objects(**query):\n",
+    "        missing += 1\n",
+    "        \n",
+    "print(f\"Missing {missing} SNPs of {len(probeset_ids)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daee32d4-102d-420a-a8ec-be2281882ee8",
+   "metadata": {},
+   "source": [
+    "Ok, for what I see all the SNPs can be found in database. However, I have less SNPs this time than the dataset before. How about sample names?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "11687033-67ad-4cc5-a577-2f044565af71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Skipping: ##batch-folder=\\\\172.16.100.6\\Home\\Resultados genotipados\\ovinos INIA\\2022\\Analisis\\OP829-924_4\n",
+      "Skipping: ##annotation-file=C:\\Users\\Public\\Documents\\AxiomAnalysisSuite\\Library\\Axiom_Ovi_Can_ovine_Analysis.r5\\Axiom_Ovi_Can.na35.r5.a6.annot.db\n",
+      "Skipping: ##export-txt-file=\\\\172.16.100.6\\Home\\Resultados genotipados\\ovinos INIA\\2022\\Resultados\\OP829-924\\OP829-924 INIA Abril.txt\n",
+      "Skipping: ##snp-count=34327\n",
+      "Skipping: ##samples-per-snp=96\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "96"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record = next(read_affymetrixRow(path))\n",
+    "record.n_samples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30e4d85d-6c82-495f-b52d-aa855c6f1342",
+   "metadata": {},
+   "source": [
+    "It seems that I have more samples than I have in metadata. Check in metadata info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7f762934-fb87-47e6-a86b-af5c98efad1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got 53 samples\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>Lab_ID</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Site</th>\n",
+       "      <th>File</th>\n",
+       "      <th>id_column</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20220323001</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20220323002</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20220323003</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20220323004</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>5</td>\n",
+       "      <td>20220323005</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    N       Lab_ID   Breed     Sex             Site                      File  \\\n",
+       "41  1  20220323001  Creole  Female  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "42  2  20220323002  Creole    Male  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "43  3  20220323003  Creole  Female  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "44  4  20220323004  Creole  Female  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "45  5  20220323005  Creole    Male  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "\n",
+       "   id_column  \n",
+       "41      None  \n",
+       "42      None  \n",
+       "43      None  \n",
+       "44      None  \n",
+       "45      None  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inia_abril_metadata = info[info[\"File\"] == inia_abril.contents[0]]\n",
+    "print(f\"Got {inia_abril_metadata.shape[0]} samples\")\n",
+    "inia_abril_metadata.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03029aca-b087-43f4-8a87-547c2f893586",
+   "metadata": {},
+   "source": [
+    "Well, I have less *ids* than the samples I see in the datafile. Get *lab ids*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "15996f31-b630-45a7-8c4d-62a598e3988d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lab_ids = [str(id_) for id_ in inia_abril_metadata[\"Lab_ID\"].tolist()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb4f4382-c8b7-4582-85b4-e0ca68321f6a",
+   "metadata": {},
+   "source": [
+    "And even samples names are different. I need to match the *file id* with the *lab id*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1ae07916-19d0-4a96-a9fc-baaf5063b8af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for lab_id in lab_ids:\n",
+    "    for col in record._fields:\n",
+    "        if lab_id in col:\n",
+    "            lab2file_ids[lab_id] = col"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34c402f7-d511-4773-8f8a-75d79529f252",
+   "metadata": {},
+   "source": [
+    "Next, I need to track this column in my datatable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a3509e5f-ae16-4332-a259-ff7286cd36f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info[\"id_column\"] = info[\"Lab_ID\"].apply(lambda lab_id: lab2file_ids[str(lab_id)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab3e1aca-23d4-414a-93cf-276eef6fc638",
+   "metadata": {},
+   "source": [
+    "Focus only on *inia apbril* data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fe044f91-a84a-4947-91d6-955d047c7549",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>Lab_ID</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Site</th>\n",
+       "      <th>File</th>\n",
+       "      <th>id_column</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20220323001</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>op829_20220323001_cel_call_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20220323002</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>op830_20220323002_cel_call_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20220323003</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>op831_20220323003_cel_call_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20220323004</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>op832_20220323004_cel_call_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>5</td>\n",
+       "      <td>20220323005</td>\n",
+       "      <td>Creole</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>INIA Las Brujas</td>\n",
+       "      <td>OP829-924 INIA Abril.txt</td>\n",
+       "      <td>op833_20220323005_cel_call_code</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    N       Lab_ID   Breed     Sex             Site                      File  \\\n",
+       "41  1  20220323001  Creole  Female  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "42  2  20220323002  Creole    Male  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "43  3  20220323003  Creole  Female  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "44  4  20220323004  Creole  Female  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "45  5  20220323005  Creole    Male  INIA Las Brujas  OP829-924 INIA Abril.txt   \n",
+       "\n",
+       "                          id_column  \n",
+       "41  op829_20220323001_cel_call_code  \n",
+       "42  op830_20220323002_cel_call_code  \n",
+       "43  op831_20220323003_cel_call_code  \n",
+       "44  op832_20220323004_cel_call_code  \n",
+       "45  op833_20220323005_cel_call_code  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inia_abril_metadata = info[info[\"File\"] == inia_abril.contents[0]]\n",
+    "inia_abril_metadata.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2cede6-fabf-4ccd-a0ac-8879c35496d1",
+   "id": "9cf781f5-45f8-44df-bfcd-d04e1c0c45cd",
    "metadata": {},
    "outputs": [],
    "source": []
